# file_to_string

./: .gitmodules  CMakeLists.txt  README.md  app_exception.cpp  app_exception.h  file_to_string.cpp  file_to_string.h
lib/: CMakeLists.txt
test/: CMakeLists.txt  README.md  test-main.cpp
